--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ rgb(21,7,51) */
 /* section "ads-banner" 
 ---------------------*/
 
-/* Section  "new-games"
+/* Section  "gamers-posts"
 ---------------------*/
 
 /* section "promoted"
