--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,20 @@ rgb(21,7,51) */
 
 /* Global Styles 
 ---------------------*/
+:root {
+  --main-color: white;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+main {
+  background-color: rgb(70, 24, 172);
+  max-width: 1920px;
+  height: 100vh;
 }
 
 /* Header Styles 
@@ -29,6 +39,41 @@ rgb(21,7,51) */
   width: 100%;
   height: 20vh;
   object-fit: cover;
+}
+
+/* top carousel
+---------------------*/
+.top-carousel-wrapper nav {
+  display: flex;
+  padding: 2rem 20px;
+  justify-content: space-around;
+}
+
+.top-carousel-wrapper nav button {
+  background-color: transparent;
+  outline: hidden;
+  border: none;
+  width: 20px;
+}
+
+.top-carousel-wrapper nav button img {
+  width: 10px;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(168deg)
+    brightness(104%) contrast(102%);
+}
+
+.top-carousel-wrapper img {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(168deg)
+    brightness(104%) contrast(102%);
+  width: 50px;
+}
+
+.top-carousel-wrapper a {
+  color: var(--main-color);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 }
 
 /* Section  "gamers-posts"
