--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,127 @@ rgb(21,7,51) */
   box-sizing: border-box;
 }
 
-/* Header Styles 
----------------------*/
+/* Header Styles */
 
-/* section "ads-banner" 
----------------------*/
+header {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 100%;
+}
+
+
+
+.header-top {
+  background-color: rgb(70, 24, 172);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  min-width: 1250px;
+}
+
+header .searchbar {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  padding: 1rem 2.5rem 1rem 1rem;
+  border: 1px solid white;
+  width: 500px;
+}
+
+.header-svg-button {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+.header-svg-button:hover{
+  color: rgb(220, 187, 21) ;
+}
+
+.header-top input {
+  padding-left: 1rem;
+  color: white;
+  background-color: transparent;
+  font-size: 1.3rem;
+  font-weight: 700;
+  outline: none;
+  border: none;
+  width: 400px;
+}
+
+.header-button{
+  background-color: rgb(250,211,24);
+  border: none;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.header-button:hover{
+  background-color:rgb(190, 161, 18) ;
+}
+
+.strip {
+  width: 1px;
+  height: 16px;
+  background-color: white;
+}
+
+.header-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(52, 18, 129);
+  min-width: 1250px;
+}
+
+.header-bottom .header-white-svg{
+  width: 20px;
+  height: 20px;
+}
+
+.header-bottom-button{
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  padding: 1rem 1rem;
+  gap: 0.5rem;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.header-bottom-button:hover{
+  color: rgb(220, 187, 21) ;
+  background-color: rgb(35, 13, 86);
+}
+
+.header-white-svg {
+  width: 24px;
+  height: 24px;
+}
+
+.header-flag {
+  width: 16px;
+  height: 16px;
+}
+
+.eneba-logo {
+  width: 150px;
+  height: 100px;
+}
+
+/* section "ads-banner" */
 
 /* Section  "gamers-posts"
 ---------------------*/
