--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,54 @@ rgb(52,18,129)
 Footer color
 rgb(21,7,51) */
 
+/* Card item for reuse
+
+*/
+
+.card-wrapper {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid gold;
+  height: auto;
+  width: 220px;
+}
+
+.card-image img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: rgb(21, 2, 65);
+  width: 100%;
+}
+
+.card-content h4 {
+  margin-bottom: 10px;
+}
+
+.card-content h5 {
+  color: grey;
+}
+
+.condition {
+  color: rgb(10, 168, 10);
+}
+
+.price {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.delivery {
+  color: rgb(110, 110, 110);
+}
+
 /* Global Styles 
 ---------------------*/
 :root {
@@ -220,6 +268,7 @@ header .searchbar {
   width: 100%;
   background-color: rgb(70, 24, 172);
   color: white;
+  height: 100vh;
 }
 
 .new-game-consoles a img {
