--- a/css/styles.css
+++ b/css/styles.css
@@ -5,54 +5,6 @@ rgb(52,18,129)
 Footer color
 rgb(21,7,51) */
 
-/* Card item for all sections
---------------------------
-
- .card-wrapper {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid gold;
-  height: auto;
-  width: 220px;
-}
-
-.card-image img {
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-  object-position: center;
-}
-
-.card-content-wrapper {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  background-color: rgb(21, 2, 65);
-  width: 100%;
-}
-
-.card-content h4 {
-  margin-bottom: 10px;
-}
-
-.card-content h5 {
-  color: grey;
-}
-
-.condition {
-  color: rgb(10, 168, 10);
-}
-
-.price {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.delivery {
-  color: rgb(110, 110, 110);
-} 
- */
-
 /* Global Styles 
 ---------------------*/
 :root {
@@ -341,6 +293,86 @@ header .searchbar {
 
 .new-game-consoles-bottom .text-column:hover {
   color: rgb(220, 187, 21);
+}
+
+
+.card-warpper-width{
+  padding: 2rem 0rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.card-wrapper {
+ display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 2rem;
+  height: auto;
+  width: 1200px;
+}
+
+.card{
+  border: 1px solid rgb(220, 187, 21);
+}
+
+.card-image img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: rgb(21, 2, 65);
+  width: 100%;
+}
+
+.card-content h4 {
+  margin-bottom: 10px;
+}
+
+.card-content h5 {
+  color: grey;
+}
+
+.condition {
+  color: rgb(10, 168, 10);
+}
+
+.price {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.delivery {
+  color: rgb(110, 110, 110);
+} 
+
+.button-sides{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 3rem;
+}
+
+.content-button{
+  padding: 0.5rem 3rem;
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  font-weight: 600;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.content-button:hover{
+  background-color: rgb(52, 18, 129);
+  border: 1px solid rgb(220, 187, 21);
 }
 
 /* section "promoted"
